--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
 # general configuration
-url: http://excentris.net
+url: http://jfgomez.co
 baseurl: ''
 
 # compass configuration
 compass:
   # an avatar or logo (optional)
-  logo: "/images/compass.png"
+  logo: "http://www.gravatar.com/avatar/0b3f17cc300b593d40619c5c695f111e?s=100"
   # author will appear under the avatar (optional)
-  author: "Compass"
+  author: "Jose F. Gomez"
   # tagline will appear under the title (optional)
-  tagline: "The <a href='http://jekyllrb.com'>Jekyll</a> theme for your personal landing page"
+  tagline: "Another human on the web"
   # if include_content is true, the contents of the content.html include will be
   # added right above the generated item list, if present
   include_content: true
   # if include_analytics is true, the content of the analytics.html include will
   # be added at the end of the <head> section. You can add your Google Analytics
   # Tracking Code to that file.
-  include_analytics: false
+  include_analytics: true
   # Twitter @username (as defined by the Twitter Card specs)
   twitter: "compass"
 
