--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ compass:
   # Tracking Code to that file.
   include_analytics: true
   # Twitter @username (as defined by the Twitter Card specs)
-  twitter: "compass"
+  twitter: "lonecat"
 
 # exclude
 exclude: ["CNAME", "Gemfile", "Gemfile.lock", "LICENSE", "README.md"]
